--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,8 +20,7 @@ jobs:
 
         shell: bash
       - name: 部署 🚀
-        uses: JamesIves/github-pages-deploy-action@main
+        uses: JamesIves/github-pages-deploy-action@v4
         env:
-          BASE_BRANCH: main
           BRANCH: gh-pages
           FOLDER: dist/spa
